# llms-from-scratch

./: .gitignore  pyproject.toml
ch02/01_main-chapter-code/: ch02.ipynb
ch03/01_main-chapter-code/: ch03.ipynb
ch04/01_main-chapter-code/: ch04.ipynb  previous_chapters.py
ch05/01_main-chapter-code/: ch05.ipynb  previous_chapters.py
ch06/01_main-chapter-code/: .gitignore  ch06.ipynb
ch07/01_main-chapter-code/: ch07.ipynb
